--- a/package.yaml
+++ b/package.yaml
@@ -24,11 +24,11 @@ default-extensions:
 
 dependencies:
 - base >=4.7 && <5
-- arbor-monad-logger
 - containers
 - datadog
 - generic-lens
 - lens
+- monad-logger
 - stm
 - text
 - time
