Fix CI build.  Switch from datadog library to arbor-datadog library

--- a/package.yaml
+++ b/package.yaml
@@ -24,8 +24,8 @@ default-extensions:
 
 dependencies:
 - base >=4.7 && <5
+- arbor-datadog
 - containers
-- datadog
 - generic-lens
 - lens
 - monad-logger
