--- a/stack.yaml
+++ b/stack.yaml
@@ -2,9 +2,10 @@ resolver: lts-12.1
 
 packages:
 - .
+
 - location:
-    git: git@github.com:packetloop/datadog.git
-    commit: 74c4ef963d7d455ecaed5de4c53249776abdf8e9
+    git: git@github.com:packetloop/arbor-datadog.git
+    commit: 16988a60daa7d9b3ffe8df4b37b2360a2dd5bc12
   extra-dep: true
 
 extra-deps:
