--- a/arbor-monad-metric-datadog.cabal
+++ b/arbor-monad-metric-datadog.cabal
@@ -21,10 +21,7 @@ source-repository head
 
 library
   exposed-modules:
-      Arbor.Monad.Metric
       Arbor.Monad.Metric.Datadog
-      Arbor.Monad.Metric.Generic
-      Arbor.Monad.Metric.Type
   other-modules:
       Paths_arbor_monad_metric_datadog
   hs-source-dirs:
@@ -32,18 +29,19 @@ library
   default-extensions: BangPatterns FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving MultiParamTypeClasses OverloadedStrings TupleSections
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
   build-depends:
-      arbor-datadog
-    , base >=4.7 && <5
-    , bytestring
-    , containers
-    , generic-lens
-    , lens
-    , mtl
-    , network
-    , resourcet
-    , stm
-    , text
-    , transformers
+      base                          >= 4.7      && < 5
+    , arbor-datadog                 >= 0.0.0    && < 0.1
+    , arbor-monad-metric            >= 0.0.2    && < 0.1
+    , bytestring                    >= 0.10.8   && < 0.11
+    , containers                    >= 0.5.10   && < 0.6
+    , generic-lens                  >= 1.1.0    && < 1.2
+    , lens                          >= 4.17     && < 4.18
+    , mtl                           >= 2.2.2    && < 2.3
+    , network                       >= 2.8.0    && < 2.9
+    , resourcet                     >= 1.2.2    && < 1.3
+    , stm                           >= 2.5.0    && < 2.6
+    , text                          >= 1.2.3    && < 1.3
+    , transformers                  >= 0.5.2    && < 0.6
   default-language: Haskell2010
 
 test-suite arbor-monad-metric-datadog-test
@@ -52,10 +50,7 @@ test-suite arbor-monad-metric-datadog-test
   other-modules:
       Arbor.Monad.MetricSpec
       Arbor.Monad.UdpServer
-      Arbor.Monad.Metric
       Arbor.Monad.Metric.Datadog
-      Arbor.Monad.Metric.Generic
-      Arbor.Monad.Metric.Type
       Paths_arbor_monad_metric_datadog
   hs-source-dirs:
       test
@@ -63,20 +58,21 @@ test-suite arbor-monad-metric-datadog-test
   default-extensions: BangPatterns FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving MultiParamTypeClasses OverloadedStrings TupleSections
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      arbor-datadog
+      base                          >= 4.7      && < 5
+    , arbor-datadog                 >= 0.0.0    && < 0.1
+    , arbor-monad-metric            >= 0.0.2    && < 0.1
     , arbor-monad-metric-datadog
-    , base >=4.7 && <5
-    , bytestring
-    , containers
-    , generic-lens
-    , hedgehog
-    , hspec
-    , hw-hspec-hedgehog
-    , lens
-    , mtl
-    , network
-    , resourcet
-    , stm
-    , text
-    , transformers
+    , bytestring                    >= 0.10.8   && < 0.11
+    , containers                    >= 0.5.10   && < 0.6
+    , generic-lens                  >= 1.1.0    && < 1.2
+    , hedgehog                      >= 0.6.1    && < 0.7
+    , hspec                         >= 2.6.0    && < 2.7
+    , hw-hspec-hedgehog             >= 0.1.0.4  && < 0.2
+    , lens                          >= 4.17     && < 4.18
+    , mtl                           >= 2.2.2    && < 2.3
+    , network                       >= 2.8.0    && < 2.9
+    , resourcet                     >= 1.2.2    && < 1.3
+    , stm                           >= 2.5.0    && < 2.6
+    , text                          >= 1.2.3    && < 1.3
+    , transformers                  >= 0.5.2    && < 0.6
   default-language: Haskell2010
