--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Created by http://www.gitignore.io
-
 ### OSX ###
 .DS_Store
 *.DS_Store
@@ -12,15 +10,15 @@ Icon
 # Thumbnails
 ._*
 
-docker/rdkafka/
-
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
 
 ### Haskell ###
-dist
+dist/
+dist-newstyle/
 cabal-dev
+.ghc.environment*
 *.o
 *.hi
 *.chi
@@ -30,6 +28,7 @@ cabal-dev
 .cabal-sandbox/
 cabal.sandbox.config
 cabal.config
+cabal.project.local
 .stack-work/
 *.aux
 *.ps
@@ -61,19 +60,3 @@ tramp
 # elpa packages
 /elpa/
 TAGS
-
-## Python
-.idea
-
-/state
-
-*.ipynb
-__pycache*
-
-# transient librdkafka
-.librdkafka
-
-/dist-newstyle
-/.ghc.environment.x86_64-darwin-*
-/cabal.project.local
-
