--- a/arbor-monad-metric-datadog.cabal
+++ b/arbor-monad-metric-datadog.cabal
@@ -1,5 +1,6 @@
+cabal-version:  2.2
 name:           arbor-monad-metric-datadog
-version:        1.0.0
+version:        1.1.0
 description:    Please see the README on Github at <https://github.com/arbor/arbor-monad-metric-datadog#readme>
 synopsis:       Metric library backend for datadog.
 category:       Metrics
@@ -11,7 +12,6 @@ copyright:      Arbor Networks
 license:        MIT
 license-file:   LICENSE
 build-type:     Simple
-cabal-version:  >= 1.10
 extra-source-files:
     ChangeLog.md
     README.md
@@ -23,26 +23,25 @@ source-repository head
 library
   exposed-modules:
       Arbor.Monad.Metric.Datadog
+      Arbor.Monad.Metric.Datadog.Options
       Arbor.Monad.Metric.Datadog.Internal
       Arbor.Monad.Metric.Datadog.Internal.Show
   other-modules:
-      Paths_arbor_monad_metric_datadog
-  hs-source-dirs:
-      src
+  hs-source-dirs: src
   default-extensions: BangPatterns FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving MultiParamTypeClasses OverloadedStrings TupleSections
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
   build-depends:
       base                          >= 4.7      && < 5
-    , arbor-datadog                 >= 0.0.0    && < 0.1
+    , arbor-datadog                 >= 0.1      && < 0.2
     , arbor-monad-metric            >= 1.1.0    && < 1.3
     , bytestring                    >= 0.10.8   && < 0.11
     , containers                    >= 0.5.10   && < 0.7
     , generic-lens                  >= 1.0.0.2  && < 1.2
     , lens                          >= 4.16     && < 4.18
     , mtl                           >= 2.2.2    && < 2.3
-    , network                       >= 2.6.0    && < 2.9
+    , network                       >= 2.6.0    && < 3
     , resourcet                     >= 1.2.1    && < 1.3
-    , stm                           >= 2.4.0    && < 2.6
+    , stm                           >= 2.5.0    && < 2.6
     , text                          >= 1.2.3    && < 1.3
     , transformers                  >= 0.5.2    && < 0.6
   default-language: Haskell2010
@@ -57,7 +56,6 @@ test-suite arbor-monad-metric-datadog-test
       Arbor.Monad.Metric.Datadog
       Arbor.Monad.Metric.Datadog.Internal
       Arbor.Monad.Metric.Datadog.Internal.Show
-      Paths_arbor_monad_metric_datadog
   hs-source-dirs:
       test
       src
@@ -65,7 +63,7 @@ test-suite arbor-monad-metric-datadog-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base                          >= 4.7      && < 5
-    , arbor-datadog                 >= 0.0.0    && < 0.1
+    , arbor-datadog                 >= 0.1      && < 0.2
     , arbor-monad-metric
     , arbor-monad-metric-datadog
     , bytestring                    >= 0.10.8   && < 0.11
@@ -79,7 +77,7 @@ test-suite arbor-monad-metric-datadog-test
     , lens                          >= 4.17     && < 4.18
     , monad-logger
     , mtl                           >= 2.2.2    && < 2.3
-    , network                       >= 2.8.0    && < 2.9
+    , network                       >= 2.8.0    && < 3
     , resourcet                     >= 1.2.2    && < 1.3
     , stm                           >= 2.5.0    && < 2.6
     , text                          >= 1.2.3    && < 1.3
