Upgrade to haskell-build-4.0.2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,19 +8,19 @@ orbs:
 workflows:
   multiple-ghc-build:
     jobs:
-      - haskell/build:
+      - haskell/build-with-binary-cache:
           name: GHC 8.2.2
           executor: haskell/ghc-8_2_2
           context: haskell-ci
 
-      - haskell/build:
+      - haskell/build-with-binary-cache:
           name: GHC 8.4.4
           executor: haskell/ghc-8_4_4
           context: haskell-ci
 
-      - haskell/build:
-          name: GHC 8.6.4
-          executor: haskell/ghc-8_6_4
+      - haskell/build-with-binary-cache:
+          name: GHC 8.6.5
+          executor: haskell/ghc-8_6_5
           context: haskell-ci
 
       - github/release-cabal:
@@ -29,7 +29,7 @@ workflows:
           requires:
             - GHC 8.2.2
             - GHC 8.4.4
-            - GHC 8.6.4
+            - GHC 8.6.5
           checkout: true
           filters:
             branches:
