--- a/arbor-monad-metric-datadog.cabal
+++ b/arbor-monad-metric-datadog.cabal
@@ -27,9 +27,9 @@ library
       Arbor.Monad.Metric.Datadog.Internal
       Arbor.Monad.Metric.Datadog.Internal.Show
   other-modules:
-  hs-source-dirs: src
-  default-extensions: BangPatterns FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving MultiParamTypeClasses OverloadedStrings TupleSections
-  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
+  hs-source-dirs:       src
+  default-extensions:   BangPatterns FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving MultiParamTypeClasses OverloadedStrings TupleSections
+  ghc-options:          -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
   build-depends:
       base                          >= 4.7      && < 5
     , arbor-datadog                 >= 0.1      && < 0.2
@@ -59,9 +59,9 @@ test-suite arbor-monad-metric-datadog-test
   hs-source-dirs:
       test
       src
-  default-extensions: BangPatterns FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving MultiParamTypeClasses OverloadedStrings TupleSections
-  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
-  build-tools:        hspec-discover
+  default-extensions:   BangPatterns FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving MultiParamTypeClasses OverloadedStrings TupleSections
+  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
+  build-tool-depends:   hspec-discover:hspec-discover
   build-depends:
       base                          >= 4.7      && < 5
     , arbor-datadog                 >= 0.1      && < 0.2
